--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-site_name: TEST
-
-site_description: TEST DESC
-site_author: SANEK
-site_url: SANEK.sanya
-
 theme: jekyll-theme-hacker
+nav:
+- Overview: 
+- What's new:
+- Features:
