--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,3 @@
-theme:
-  name: 'material'
-  favicon: 'https://badoo.com/favicon.ico'
-  logo:
-    icon: 'code'
-  palette:
-    primary: 'deep purple'
-    accent: 'pink'
-  social:
-  - type: 'github'
-    link: 'https://github.com/badoo/MVICore'
-  font:
-    text: 'Fira Sans'
-    code: 'Fira Mono'
+theme: jekyll-theme-hacker
 title: Welcome my buddy
-markdown_extensions:
-- admonition
-- codehilite
-- footnotes
-- meta
-- toc:
-    permalink: true
-- pymdownx.betterem:
-    smart_enable: all
-- pymdownx.caret
-- pymdownx.inlinehilite
-- pymdownx.magiclink
-- pymdownx.smartsymbols
-- pymdownx.superfences
-nav:
-- Overview: README.md
+nav: - Overview: README.md
